--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 install:
 - pip install -r requirements.txt
 - pip install coveralls
-script: nosetests --with-coverage
+script: nosetests --with-coverage --cover-package=goodreads
 notifications:
   email: false
 after_success:
