--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+python:
+    - "2.7"
+    - "3.5"
 before_install:
 - openssl aes-256-cbc -K $encrypted_a6b16d87fee2_key -iv $encrypted_a6b16d87fee2_iv
   -in apikey.py.enc -out goodreads/apikey.py -d
